:sparkles: Class #2 - Advanced Styling and Positioning: Transforming Layouts

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="./assets/icon/favicon.png" type="image/png">
+  <link rel="shortcut icon" href="./assets/icons/favicon.png" type="image/png">
   <!--Reset css-->
   <link rel="stylesheet" href="./reset.css">
   <!--Styles-->
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css"/>
 
   <title>Spotify Imersão</title>
-  
+
 </head>
 
 <body>
@@ -25,7 +25,6 @@
           <img src="./assets/icons/logo-spotify.png" alt="spotify icon">
         </a>
       </div>
-      <div>
         <ul>
           <li>
             <a href="#">
@@ -40,14 +39,36 @@
             </a>
           </li>
         </ul>
-      </div>
     </nav>
     <div class="library">
-      <div class="library-title">
-        <span class="fa fa-book"></span>
-        <span>Sua biblioteca</span>
+      <div class="library-content">
+        <button class="library-button">
+          <span class="fa fa-book"></span>
+          <span>Sua biblioteca</span>
+        </button>
+        <span class="fa fa-plus"></span>
       </div>
-      <span class="fa fa-plus"></span>
+
+      <section class="section-playlist">
+        <div class="section-playlist-content">
+          <span class="text title">Crie sua primeira playlist</span>
+          <span class="text subtitle">É fácil, vamos te ajudar</span>
+          <button class="section-playlist-button">
+            <span>Criar playlist</span>
+          </button>
+        </div>
+      </section>
+
+      <div class="cookies">
+        <a href="#">Cookies</a>
+      </div>
+
+      <div class="languages">
+        <button class="languages-button">
+          <span class="fa fa-globe"></span>
+          <span>Português do Brasil</span>
+        </button>
+      </div>
     </div>
   </div>
 </body>
