:sparkles: Challenge Class #2 - Footer

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <!--Styles-->
   <link rel="stylesheet" href="./src/styles/sidebar-footer.css">
   <link rel="stylesheet" href="./src/styles/main-content.css">
+  <link rel="stylesheet" href="./src/styles/footer.css">
   <!--Font awesome cdn links-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"/>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css"/>
@@ -99,6 +100,15 @@
       </nav>
     </div>
   </main>
+  <footer class="footer">
+    <div class="footer-content">
+      <p class="footer-title">Testar o premium de graça</p>
+      <p class="text">Inscreva-se para curtir música ilimitada e podcasts só com alguns anúncios. Não precisa de cartão de crédito.</p>
+    </div>
+    <button class="footer-button">
+      Inscreva-se grátis
+    </button>
+  </footer>
 </body>
 
 </html>
