:sparkles: Challange Class #3 - Playlists container

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="./src/styles/sidebar-footer.css">
   <link rel="stylesheet" href="./src/styles/main-content.css">
   <link rel="stylesheet" href="./src/styles/footer.css">
+  <link rel="stylesheet" href="./src/styles/main-body.css">
   <!--Font awesome cdn links-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"/>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css"/>
@@ -98,6 +99,15 @@
             <button class="login">Login</button>
           </div>
       </nav>
+      <div class="main-body">
+        <section class="header">
+          <p class="main-title">Boa tarde</p>
+          <p class="main-subtitle">Navegar por todas as seções</p>
+        </section>
+        <section class="sections">
+
+        </section>
+      </div>
     </div>
   </main>
   <footer class="footer">
